use_undefined_identifier/c3/f_in_check
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1325:51: error: use of undeclared identifier 'xmmword_41CAF0'
_mm_add_epi32( _mm_load_si128( ( const __m128i *)&xmmword_41CAF0), v8), 
                                                  ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1327:47: error: use of undeclared identifier 'xmmword_41CB00'
_mm_cmpeq_epi32( _mm_add_epi32( v8, ( __m128i)xmmword_41CB00), v9))) ) 
                                              ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1369:7: error: use of undeclared identifier 'dword_66859C'
v14 = dword_66859C[wking_loc + v13--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1412:7: error: use of undeclared identifier 'dword_66859C'
v14 = dword_66859C[wking_loc + v13--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1541:8: error: use of undeclared identifier 'dword_66859C'
v20 = &dword_66859C[wking_loc]; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1642:51: error: use of undeclared identifier 'xmmword_41CAF0'
_mm_add_epi32( _mm_load_si128( ( const __m128i *)&xmmword_41CAF0), v15), 
                                                  ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1644:48: error: use of undeclared identifier 'xmmword_41CB00'
_mm_cmpeq_epi32( _mm_add_epi32( v15, ( __m128i)xmmword_41CB00), v16))) ) 
                                               ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1686:7: error: use of undeclared identifier 'dword_66859C'
v14 = dword_66859C[bking_loc + v18--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1729:7: error: use of undeclared identifier 'dword_66859C'
v14 = dword_66859C[bking_loc + v18--] == 13; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/moves.c:1858:8: error: use of undeclared identifier 'dword_66859C'
v31 = &dword_66859C[bking_loc]; 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/f_in_check/src/obj/moves.o] Error 1
